[gd_scene load_steps=8 format=2]

[ext_resource path="res://PlayerMovementBase.gd" type="Script" id=1]
[ext_resource path="res://Gun9mm.gd" type="Script" id=2]
[ext_resource path="res://9mm.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayerContainer.gd" type="Script" id=4]
[ext_resource path="res://GameUI.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[node name="PlayerContainer" type="Node2D"]
script = ExtResource( 4 )

[node name="ProjectileContainer" type="Node2D" parent="."]

[node name="Gun9mm" type="Node2D" parent="ProjectileContainer"]
script = ExtResource( 2 )
Bullet = ExtResource( 3 )
magSize = 45
reserveMags = 10

[node name="ReloadTimer" type="Timer" parent="ProjectileContainer/Gun9mm"]
one_shot = true

[node name="PlayerRBody" type="RigidBody2D" parent="."]
collision_layer = 3
mass = 500.0
contacts_reported = 10
contact_monitor = true
linear_damp = 2.0
script = ExtResource( 1 )
baseMoveSpeed = 100.0

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PlayerRBody"]
remote_path = NodePath("../../Node2D")
update_rotation = false
update_scale = false

[node name="PlayerHitboundary" type="CollisionShape2D" parent="PlayerRBody"]
shape = SubResource( 1 )

[node name="PlayerSpriteTemp" type="Polygon2D" parent="PlayerRBody"]
color = Color( 0.870588, 0.870588, 0.870588, 1 )
polygon = PoolVector2Array( 0.0741024, 9.94511, 2.46203, 9.57053, 4.84996, 8.49362, 6.91013, 7.04214, 8.5489, 5.16926, 9.53217, 2.68768, 10.0472, 0.0656471, 9.62581, -2.50957, 8.64255, -5.03796, 7.14424, -7.05131, 5.08407, -8.69009, 2.50885, -9.57971, 0.0741024, -9.95428, -2.267, -9.72017, -4.84222, -8.54962, -7.04286, -6.86402, -8.54116, -5.08478, -9.47761, -2.65003, -9.99265, 0.0188246, -9.57125, 2.54722, -8.63481, 4.88832, -6.90239, 7.04214, -5.21679, 8.49362, -2.96933, 9.61736 )

[node name="PlayerView" type="Camera2D" parent="PlayerRBody"]
current = true

[node name="PlayerHitbox" type="Area2D" parent="PlayerRBody"]
gravity_vec = Vector2( 0, 0 )

[node name="HitboxBoundary" type="CollisionShape2D" parent="PlayerRBody/PlayerHitbox"]
shape = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="."]

[node name="GameUI" parent="Node2D" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -360.0
margin_top = -240.0
margin_right = 360.0
margin_bottom = 240.0
rect_min_size = Vector2( 720, 480 )

[node name="ArmorTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="hpUpdate" from="." to="Node2D/GameUI" method="_on_PlayerContainer_hpUpdate"]
[connection signal="scoreAdd" from="." to="Node2D/GameUI" method="_on_PlayerContainer_scoreAdd"]
[connection signal="timeout" from="ProjectileContainer/Gun9mm/ReloadTimer" to="ProjectileContainer/Gun9mm" method="_on_ReloadTimer_timeout"]
[connection signal="takingDamage" from="PlayerRBody" to="." method="_on_PlayerRBody_takingDamage"]
[connection signal="timeout" from="ArmorTimer" to="." method="_on_ArmorTimer_timeout"]
